tests/baselines/reference/mergedInterfacesWithConflictingPropertyNames.errors.txt
mergedInterfacesWithConflictingPropertyNames.ts(6,5): error TS2717: Subsequent property declarations must have the same type.  Property 'x' must be of type 'string', but here has type 'number'.
mergedInterfacesWithConflictingPropertyNames.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
mergedInterfacesWithConflictingPropertyNames.ts(15,9): error TS2717: Subsequent property declarations must have the same type.  Property 'x' must be of type 'T', but here has type 'number'.
mergedInterfacesWithConflictingPropertyNames.ts(19,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
mergedInterfacesWithConflictingPropertyNames.ts(25,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
mergedInterfacesWithConflictingPropertyNames.ts(31,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
mergedInterfacesWithConflictingPropertyNames.ts(37,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
mergedInterfacesWithConflictingPropertyNames.ts(39,9): error TS2717: Subsequent property declarations must have the same type.  Property 'x' must be of type 'T', but here has type 'number'.


==== mergedInterfacesWithConflictingPropertyNames.ts (8 errors) ====
    interface A {
        x: string; // error
    }
    
    interface A {
        x: number;
        ~
!!! error TS2717: Subsequent property declarations must have the same type.  Property 'x' must be of type 'string', but here has type 'number'.
!!! related TS6203 mergedInterfacesWithConflictingPropertyNames.ts:2:5: 'x' was also declared here.
    }
    
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface A<T> {
            x: T;
        }
    
        interface A<T> {
            x: number;  // error
            ~
!!! error TS2717: Subsequent property declarations must have the same type.  Property 'x' must be of type 'T', but here has type 'number'.
!!! related TS6203 mergedInterfacesWithConflictingPropertyNames.ts:11:9: 'x' was also declared here.
        }
    }
    
    module M2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface A<T> {
            x: T;
        }   
    }
    
    module M2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface A<T> {
            x: number;  // ok, different declaration space than other M2
        }
    }
    
    module M3 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface A<T> {
            x: T;
        }
    }
    
    module M3 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface A<T> {
            x: number;  // error
            ~
!!! error TS2717: Subsequent property declarations must have the same type.  Property 'x' must be of type 'T', but here has type 'number'.
!!! related TS6203 mergedInterfacesWithConflictingPropertyNames.ts:33:9: 'x' was also declared here.
        }
    }